# goldearn-hft

./: .clang-format  .clang-tidy  .gitignore  .gitsecret  .timeout_wrappers  BUILD_STATUS_SUMMARY.md  CI_FIXES_SUMMARY.md  CI_PIPELINE_FINAL_FIX.md  CI_PIPELINE_FIXES_COMPLETE.md  CMakeLists.minimal.txt  CMakeLists.simple.txt  CMakeLists.txt  CMakeLists.txt.backup  CRITICAL_FIXES_COMPLETED.md  DAY4_COMPLETION_REPORT.md  DAY4_FINAL_STATUS.md  DAY5_SESSION.md  Dockerfile  GIT_TIMEOUT_FIXES_SUMMARY.md  INSTALL_MACOS.md  README.md  SESSION.md  build.sh  docker-compose.yml  git_optimization_summary.md  main.cpp  rebuild_and_test.sh  run_tests.sh  safe_commit.sh  setup_test_configs.sh  test_git_optimization.sh  test_results_summary.md  test_runner.cpp  verify_build.sh
.claude/: settings.local.json
.claude/agents/: multi-tier-code-reviewer.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/hooks/: pre-commit  pre-push  setup-hooks.sh
.github/workflows/: build.yml  ci.yml  dependencies.yml  linting.yml  release.yml  static-analysis.yml  tests.yml
config/: development.conf  production.conf  production.json
docs/: 00-financial-model.md  01-system-architecture.md  02-trading-engine.md  03-risk-management.md  04-order-management.md  05-market-data.md  06-strategies.md  07-backtesting.md  08-monitoring.md  09-deployment.md  10-team-requirements.md  2-year-roadmap.md  DAY5_FEATURES.md  FINAL_SECURITY_ASSESSMENT.md  SECURITY_FIXES.md  bootstrap-strategy.md  business-strategy.md  complete-tech-stack.md  daily-tracker.md  daily-work-breakdown-year1-q2.md  daily-work-breakdown-year1.md  daily-work-breakdown-year2.md  detailed-strategies.md  india-strategy.md  master-execution-tracker.md  team-structure.md
scripts/: git_timeout_optimizer.sh  git_wrapper.sh  optimized_build.sh  setup-dev-environment.sh  setup-macos-build-env.sh  timeout_optimizer.sh
src/config/: config_manager.cpp  config_manager.hpp  secure_config_manager.cpp
src/core/: latency_tracker.cpp  latency_tracker.hpp  rate_limiter.hpp
src/jwt-cpp/: jwt.h
src/main/: feed_handler_main.cpp  risk_monitor_main.cpp  trading_main.cpp
src/market_data/: message_types.hpp  nse_protocol.cpp  nse_protocol.hpp  order_book.cpp  order_book.hpp  order_book_optimized.hpp
src/monitoring/: enterprise_integration.hpp  health_check.cpp  health_check.hpp  performance_monitor.hpp  prometheus_metrics.cpp  prometheus_metrics.hpp  secure_health_check.cpp  secure_health_check.hpp
src/network/: exchange_auth.cpp  exchange_auth.hpp  secure_connection.cpp  secure_connection.hpp
src/risk/: advanced_position_tracker.cpp  advanced_position_tracker.hpp  risk_engine.cpp  risk_engine.hpp
src/security/: certificate_manager.cpp  certificate_manager.hpp  enterprise_key_manager.hpp  secure_jwt_manager.cpp  secure_jwt_manager.hpp
src/trading/: order_manager.hpp  position_manager.hpp  strategy_base.hpp  trading_engine.hpp
src/utils/: logger.cpp  logger.hpp  simple_logger.hpp
tests/: CMakeLists.txt  test_basic_config.cpp  test_basic_security.cpp  test_certificate_manager.cpp  test_enhanced_risk_management.cpp  test_exchange_auth.cpp  test_health_check.cpp  test_json_config_parser.cpp  test_latency_tracker.cpp  test_latency_tracker_comprehensive.cpp  test_market_data_engine.cpp  test_memory_pool.cpp  test_nse_protocol.cpp  test_nse_protocol_comprehensive.cpp  test_order_book.cpp  test_order_book_comprehensive.cpp  test_order_manager.cpp  test_position_manager.cpp  test_pre_trade_checks.cpp  test_prometheus_metrics.cpp  test_risk_engine.cpp  test_strategy_base.cpp  test_thread_pool.cpp  test_trading_engine.cpp  test_var_calculator.cpp
tests/integration/: test_integration_suite.cpp
tests/performance/: test_performance_regression.cpp
